[gd_scene load_steps=4 format=3 uid="uid://cg2375lpvid6u"]

[ext_resource type="Script" uid="uid://tmj0n2ln5w4l" path="res://scenes/Player/player.gd" id="1_hry47"]
[ext_resource type="Texture2D" uid="uid://cbonpyucg43su" path="res://graphics/player/player.png" id="1_xnlnb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bfway"]
radius = 67.0671

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hry47")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(2, -25)
rotation = 1.5708
texture = ExtResource("1_xnlnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-37, -27)
shape = SubResource("CircleShape2D_bfway")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(92, 3)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(93, -15)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(94, -6)

[node name="GrenadeStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(98, -5)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
